--- a/HeartDiseaseModel.ipynb
+++ b/HeartDiseaseModel.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "8555f321-18ae-40e3-b9cc-6aecaa6cdb5e",
    "metadata": {},
    "outputs": [],
@@ -28,6 +28,7 @@
     "\n",
     "from joblib import dump, load\n",
     "\n",
+    "pd.set_option('display.width', 1000000000)\n",
     "randomseed = 15"
    ]
   },
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "c605bce8",
    "metadata": {},
    "outputs": [
@@ -57,31 +58,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     age  sex  cp  trestbps  restecg  thalach  exang  oldpeak  slope  ca  \\\n",
-      "201   60    1   0       125        0      141      1      2.8      1   1   \n",
-      "197   67    1   0       125        1      163      0      0.2      1   2   \n",
-      "64    58    1   2       140        0      165      0      0.0      2   0   \n",
-      "134   41    0   1       126        1      163      0      0.0      2   0   \n",
-      "145   70    1   1       156        0      143      0      0.0      2   0   \n",
-      "..   ...  ...  ..       ...      ...      ...    ...      ...    ...  ..   \n",
-      "199   65    1   0       110        0      158      0      0.6      2   2   \n",
-      "155   58    0   0       130        1      131      0      0.6      1   0   \n",
-      "156   47    1   2       130        1      179      0      0.0      2   0   \n",
-      "133   41    1   1       110        1      153      0      0.0      2   0   \n",
-      "245   48    1   0       124        0      166      0      0.5      1   0   \n",
-      "\n",
-      "     thal  target  \n",
-      "201     3       0  \n",
-      "197     3       0  \n",
-      "64      2       1  \n",
-      "134     2       1  \n",
-      "145     2       1  \n",
-      "..    ...     ...  \n",
-      "199     1       0  \n",
-      "155     2       1  \n",
-      "156     2       1  \n",
-      "133     2       1  \n",
-      "245     3       0  \n",
+      "     age  sex  cp  trestbps  restecg  thalach  exang  oldpeak  slope  ca  thal  target\n",
+      "201   60    1   0       125        0      141      1      2.8      1   1     3       0\n",
+      "197   67    1   0       125        1      163      0      0.2      1   2     3       0\n",
+      "64    58    1   2       140        0      165      0      0.0      2   0     2       1\n",
+      "134   41    0   1       126        1      163      0      0.0      2   0     2       1\n",
+      "145   70    1   1       156        0      143      0      0.0      2   0     2       1\n",
+      "..   ...  ...  ..       ...      ...      ...    ...      ...    ...  ..   ...     ...\n",
+      "199   65    1   0       110        0      158      0      0.6      2   2     1       0\n",
+      "155   58    0   0       130        1      131      0      0.6      1   0     2       1\n",
+      "156   47    1   2       130        1      179      0      0.0      2   0     2       1\n",
+      "133   41    1   1       110        1      153      0      0.0      2   0     2       1\n",
+      "245   48    1   0       124        0      166      0      0.5      1   0     3       0\n",
       "\n",
       "[303 rows x 12 columns]\n"
      ]
@@ -105,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "63aa6490",
    "metadata": {},
    "outputs": [
@@ -113,6 +101,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "X Data:\n",
       "     age  sex  cp  trestbps  restecg  thalach  exang  oldpeak  slope  ca  thal\n",
       "201   60    1   0       125        0      141      1      2.8      1   1     3\n",
       "197   67    1   0       125        1      163      0      0.2      1   2     3\n",
@@ -127,6 +116,8 @@
       "245   48    1   0       124        0      166      0      0.5      1   0     3\n",
       "\n",
       "[303 rows x 11 columns]\n",
+      "\n",
+      "y Data:\n",
       "201    0\n",
       "197    0\n",
       "64     1\n",
@@ -138,7 +129,8 @@
       "156    1\n",
       "133    1\n",
       "245    0\n",
-      "Name: target, Length: 303, dtype: int64\n"
+      "Name: target, Length: 303, dtype: int64\n",
+      "\n"
      ]
     }
    ],
@@ -147,8 +139,12 @@
     "X = heartDisease.drop('target', axis=1)\n",
     "y = heartDisease['target']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
-    "print(X)\n",
-    "print(y)"
+    "print(f'''X Data:\n",
+    "{X}\n",
+    "\n",
+    "y Data:\n",
+    "{y}\n",
+    "''')"
    ]
   },
   {
@@ -169,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "cfe5b269",
    "metadata": {},
    "outputs": [],
@@ -203,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "ad61f540",
    "metadata": {},
    "outputs": [
@@ -211,6 +207,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Initial Parameters:\n",
+      "\n",
       "                         RandomForestClassifier\n",
       "bootstrap                                  True\n",
       "ccp_alpha                                   0.0\n",
@@ -265,10 +263,15 @@
     "initial_models = {'RandomForestClassifier': RandomForestClassifier(n_jobs=-1),\n",
     "                  'KNeighborsClassifier': KNeighborsClassifier(n_jobs=-1),\n",
     "                  'LogisticRegression': LogisticRegression(n_jobs=-1)}\n",
-    "                  \n",
-    "print(f\"{pd.DataFrame(initial_models['RandomForestClassifier'].get_params(), index=['RandomForestClassifier']).transpose()}\\n\")\n",
-    "print(f\"{pd.DataFrame(initial_models['KNeighborsClassifier'].get_params(), index=['KNeighborsClassifier']).transpose()}\\n\")\n",
-    "print(f\"{pd.DataFrame(initial_models['LogisticRegression'].get_params(), index=['LogisticRegression']).transpose()}\\n\")"
+    "\n",
+    "print(f'''Initial Parameters:\n",
+    "\n",
+    "{pd.DataFrame(initial_models['RandomForestClassifier'].get_params(), index=['RandomForestClassifier']).transpose()}\n",
+    "\n",
+    "{pd.DataFrame(initial_models['KNeighborsClassifier'].get_params(), index=['KNeighborsClassifier']).transpose()}\n",
+    "\n",
+    "{pd.DataFrame(initial_models['LogisticRegression'].get_params(), index=['LogisticRegression']).transpose()}\n",
+    "''')"
    ]
   },
   {
@@ -281,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "06e641f4",
    "metadata": {},
    "outputs": [
@@ -309,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "8347ead9",
    "metadata": {},
    "outputs": [],
@@ -330,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "41b49878",
    "metadata": {},
    "outputs": [
@@ -382,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "id": "a10133dc",
    "metadata": {},
    "outputs": [],
@@ -414,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "8200778d",
    "metadata": {},
    "outputs": [],
@@ -449,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "id": "76c379c3",
    "metadata": {},
    "outputs": [],
@@ -468,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "id": "022ab69d",
    "metadata": {},
    "outputs": [
@@ -489,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "id": "6589f77d",
    "metadata": {},
    "outputs": [
@@ -507,11 +510,11 @@
       "Best Parameters for Models:\n",
       "\n",
       "                  RandomForestClassifier\n",
-      "n_estimators                        2600\n",
-      "min_samples_split                     18\n",
-      "min_samples_leaf                       9\n",
+      "n_estimators                        2800\n",
+      "min_samples_split                     12\n",
+      "min_samples_leaf                       5\n",
       "max_features                        sqrt\n",
-      "max_depth                             20\n",
+      "max_depth                             90\n",
       "bootstrap                           True\n",
       "\n",
       "          LogisticRegression\n",
@@ -578,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "id": "4c428733",
    "metadata": {},
    "outputs": [],
@@ -603,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "id": "a5e408f8",
    "metadata": {},
    "outputs": [],
@@ -621,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "id": "4fa38b38",
    "metadata": {},
    "outputs": [
@@ -640,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "id": "d104a241",
    "metadata": {},
    "outputs": [
@@ -648,7 +651,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Parameters\n",
+      "Best Parameters:\n",
       "          LogisticRegression\n",
       "C                        0.5\n",
       "max_iter                40.0\n"
@@ -656,8 +659,8 @@
     }
    ],
    "source": [
-    "print('Best Parameters')\n",
-    "print(pd.DataFrame(gs_logReg.best_params_, index=['LogisticRegression']).transpose())"
+    "print(f'''Best Parameters:\n",
+    "{pd.DataFrame(gs_logReg.best_params_, index=['LogisticRegression']).transpose()}''')"
    ]
   },
   {
@@ -678,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "id": "0113d4e0",
    "metadata": {},
    "outputs": [
@@ -692,7 +695,8 @@
       "Precision            0.891892\n",
       "Recall               0.916667\n",
       "F1                   0.904110\n",
-      "RocAuc               0.878333\n"
+      "RocAuc               0.878333\n",
+      "\n"
      ]
     }
    ],
@@ -702,8 +706,10 @@
     "model_RocAuc = {}\n",
     "model_RocAuc['LogisticRegression'] = roc_auc_score(y_test, ypred)\n",
     "final_result.append(model_RocAuc)\n",
-    "print('Final Score:')\n",
-    "print(pd.DataFrame(final_result, index=['Accuracy', 'Precision', 'Recall', 'F1', 'RocAuc']))"
+    "\n",
+    "print(f'''Final Score:\n",
+    "{pd.DataFrame(final_result, index=['Accuracy', 'Precision', 'Recall', 'F1', 'RocAuc'])}\n",
+    "''')"
    ]
   },
   {
@@ -716,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "id": "c139ad18",
    "metadata": {},
    "outputs": [
@@ -752,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "id": "94684aa4",
    "metadata": {},
    "outputs": [
@@ -784,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "id": "d56de5c2",
    "metadata": {},
    "outputs": [
@@ -826,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "id": "744f81e0",
    "metadata": {},
    "outputs": [
@@ -836,7 +842,7 @@
        "['HeartDiseaseModel.joblib']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "id": "b2815308",
    "metadata": {},
    "outputs": [],
@@ -873,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "id": "76a4e06d",
    "metadata": {},
    "outputs": [
