--- a/HeartDiseaseDataExploration.ipynb
+++ b/HeartDiseaseDataExploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "aca33faf-b2ee-4b47-88d3-a92de7280b33",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,9 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "pd.set_option('display.width', 1000000000)"
    ]
   },
   {
@@ -32,13 +34,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d77aef9f-31db-4b48-afac-54e12f5067a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  slope  ca  thal  target\n",
+      "0     63    1   3       145   233    1        0      150      0      2.3      0   0     1       1\n",
+      "1     37    1   2       130   250    0        1      187      0      3.5      0   0     2       1\n",
+      "2     41    0   1       130   204    0        0      172      0      1.4      2   0     2       1\n",
+      "3     56    1   1       120   236    0        1      178      0      0.8      2   0     2       1\n",
+      "4     57    0   0       120   354    0        1      163      1      0.6      2   0     2       1\n",
+      "..   ...  ...  ..       ...   ...  ...      ...      ...    ...      ...    ...  ..   ...     ...\n",
+      "298   57    0   0       140   241    0        1      123      1      0.2      1   0     3       0\n",
+      "299   45    1   3       110   264    0        1      132      0      1.2      1   0     3       0\n",
+      "300   68    1   0       144   193    1        1      141      0      3.4      1   2     3       0\n",
+      "301   57    1   0       130   131    0        1      115      1      1.2      1   1     3       0\n",
+      "302   57    0   1       130   236    0        0      174      0      0.0      1   1     2       0\n",
+      "\n",
+      "[303 rows x 14 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "heartDiseaseData = pd.read_csv('heart-disease.csv')\n",
-    "heartDisease = pd.DataFrame(heartDiseaseData)"
+    "heartDisease = pd.DataFrame(heartDiseaseData)\n",
+    "print(heartDisease)"
    ]
   },
   {
@@ -66,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7ce006fc",
    "metadata": {},
    "outputs": [
@@ -122,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1c4dab4e",
    "metadata": {},
    "outputs": [
@@ -173,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d06621b0",
    "metadata": {},
    "outputs": [
@@ -213,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "59e20450",
    "metadata": {},
    "outputs": [
@@ -251,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "345a88d4",
    "metadata": {},
    "outputs": [
