--- a/ProjectOverview.ipynb
+++ b/ProjectOverview.ipynb
@@ -25,6 +25,11 @@
     "    - Heart Disease Dataset Description:\n",
     "        - Original Data from https://archive.ics.uci.edu/ml/datasets/heart+disease\n",
     "    - Find Patterns between Columns\n",
+    "        - Relationship between Sex and Heart Disease\n",
+    "        - Relationship between Chest Pain Type and Heart Disease\n",
+    "        - Age Distribution\n",
+    "        - Relationship between Thalach and Age\n",
+    "        - Data Correlation\n",
     "#### 3. Data Features\n",
     "    - Heart Disease Dataset Attributes:\n",
     "        - age (Age in Years)\n",
