--- a/ProjectOverview.ipynb
+++ b/ProjectOverview.ipynb
@@ -24,7 +24,7 @@
     "#### 2. Data Details and Exploration\n",
     "    - Heart Disease Dataset Description:\n",
     "        - Original Data from https://archive.ics.uci.edu/ml/datasets/heart+disease\n",
-    "    - Find Patterns between Columns\n",
+    "    - Patterns between columns in the Data\n",
     "        - Relationship between Sex and Heart Disease\n",
     "        - Relationship between Chest Pain Type and Heart Disease\n",
     "        - Age Distribution\n",
