heart disease model
heart disease model

--- a/ProjectOverview.ipynb
+++ b/ProjectOverview.ipynb
@@ -75,28 +75,30 @@
     "    - Numpy\n",
     "    - Matplotlib\n",
     "- Scikit-Learn Models:\n",
-    "    - KNeighbours Classifier\n",
     "    - RandomForest Classifier\n",
+    "    - KNeighbours Classifier\n",
     "    - Logistic Regression\n",
     "- Model Evaluation:\n",
+    "    - Accuracy\n",
+    "    - Precision\n",
+    "    - Recall\n",
+    "    - F1 Score\n",
+    "    - ROC AUC Score\n",
+    "    - ROC Curve\n",
     "    - Confusion Matrix\n",
     "    - Classification Report\n",
-    "    - Precision Score\n",
-    "    - Recall Score\n",
-    "    - F1 Score\n",
-    "    - ROC Curve\n",
-    "    - ROC AUC Score\n",
     "- Tuning Model:\n",
-    "    - Manually\n",
-    "    - RandomizedSearchCV\n",
-    "    - GridSearchCV\n",
-    "#### 6. Experimentation\n"
+    "    - Manual Tuning\n",
+    "    - GridSearchCV"
    ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "82eae3c4778d1738b2e1b7ce53d66f36d91989bebe140e8fc210e118dd8980f2"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.2 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
