--- a/ProjectOverview.ipynb
+++ b/ProjectOverview.ipynb
@@ -44,27 +44,31 @@
     "    - trestbp (Resting Blood Pressure, in mmHg)\n",
     "    - chol (Serum Cholestoral, in mg/dl)\n",
     "    - fbs (Fasting Blood Sugar > 120mg/dl)\n",
-    "        - 1 = True\n",
     "        - 0 = False\n",
+    "        - 1 = True\n",
     "    - restecg (Resting ECG Result)\n",
+    "        - 0 = Normal\n",
+    "        - 1 = ST-T Wave Abnormality\n",
+    "        - 2 = Probable Left Ventricular Hypertrophy\n",
     "    - thalach (Maximum Heart Rate Achieved)\n",
     "    - exang (Exercised Induced Angina)\n",
-    "        - 1 = Yes\n",
     "        - 0 = No\n",
+    "        - 1 = Yes\n",
     "    - oldpeak (ST Depression Induced by Exercise Relative to Rest)\n",
     "    - slope (Slope of the Peak Exercise ST Segment)\n",
     "        - 0 = Upsloping (Better Heart Rate with Exercise, Sign of a Very Healthy Heart)\n",
     "        - 1 = Flat (Minimal Change, Sign of a Typical Healthy Heart)\n",
     "        - 2 = Downloping (Sign of an Unhealthy Heart)\n",
-    "    - ca (Number of Major Vessels colored by Flouosopy)\n",
+    "    - ca (Number of Major Vessels colored by Flouroscopy)\n",
     "        - Number from 0 to 3\n",
-    "    - thal\n",
-    "        - 3 = Normal\n",
-    "        - 6 = Fixed Defect\n",
-    "        - 7 = Reversable Defect\n",
+    "    - thal (Thalassemia State)\n",
+    "        - 0 = None\n",
+    "        - 1 = Normal\n",
+    "        - 2 = Fixed Defect\n",
+    "        - 3 = Reversible Defect\n",
     "    - target\n",
-    "        - 1 = Heart Disease Present\n",
     "        - 0 = No Heart Disease\n",
+    "        - 1 = Heart Disease Present\n",
     "- Determine High Importance Features\n",
     "    - Correlation Matrix\n",
     "#### 4. Evaluation Metrics Description\n",
@@ -89,7 +93,9 @@
     "    - Classification Report\n",
     "- Tuning Model:\n",
     "    - Manual Tuning\n",
-    "    - GridSearchCV"
+    "    - GridSearchCV\n",
+    "#### 6. Model Deployment\n",
+    "- Streamlit"
    ]
   }
  ],
