--- a/HeartDiseaseModel.ipynb
+++ b/HeartDiseaseModel.ipynb
@@ -595,13 +595,13 @@
     }
    ],
    "source": [
-    "print(f'''RandomForestClassifier------------\n",
+    "print(f'''RandomForestClassifier-----------------\n",
     "{pd.DataFrame(initial_models[\"RandomForestClassifier\"].get_params(), index=[\"Parameters\"]).transpose()}\n",
     "\n",
-    "KNeighborsClassifier--------------\n",
+    "KNeighborsClassifier-------------------\n",
     "{pd.DataFrame(initial_models[\"KNeighborsClassifier\"].get_params(), index=[\"Parameters\"]).transpose()}\n",
     "\n",
-    "LogisticRegression----------------\n",
+    "LogisticRegression---------------------\n",
     "{pd.DataFrame(initial_models[\"LogisticRegression\"].get_params(), index=[\"Parameters\"]).transpose()}''')"
    ]
   },
@@ -939,9 +939,10 @@
     }
    ],
    "source": [
-    "print(f'''RandomForestClassifier------------\n",
+    "print(f'''RandomForestClassifier-----------------\n",
     "{pd.DataFrame(gs_randForest.best_params_, index=[\"Parameters\"]).transpose()}\n",
-    "LogisticRegression----------------\n",
+    "\n",
+    "LogisticRegression---------------------\n",
     "{pd.DataFrame(gs_logReg.best_params_, index=[\"Parameters\"]).transpose()}''')"
    ]
   },
@@ -1251,7 +1252,7 @@
     }
    ],
    "source": [
-    "!streamlit run ./HeartDiseaseModelApp.py"
+    "!streamlit run ./HeartDiseasePredictionApp.py"
    ]
   }
  ],
